--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,6 @@
-alabaster==0.7.10
-argon2-cffi==18.1.0
-asn1crypto==0.24.0
-astroid==1.6.1
-Babel==2.5.3
-bcrypt==3.1.4
-bleach==2.1.2
-certifi==2018.1.18
-cffi==1.11.4
-chardet==3.0.4
-cloudpickle==0.5.2
-colorama==0.3.9
-cryptography==2.1.4
-decorator==4.2.1
+certifi==2018.4.16
 Django==2.0.2
-django-bootstrap3==9.1.0
-django-braces==1.12.0
 django-favicon==0.1.3
-docutils==0.14
-entrypoints==0.2.3
-html5lib==1.0.1
-idna==2.6
-imagesize==1.0.0
-ipykernel==4.8.2
-ipython==6.2.1
-ipython-genutils==0.2.0
-isort==4.3.4
-jedi==0.11.1
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter-client==5.2.2
-jupyter-core==4.4.0
-lazy-object-proxy==1.3.1
-MarkupSafe==1.0
-mccabe==0.6.1
-misaka==2.1.0
-mistune==0.8.3
-nbconvert==5.3.1
-nbformat==4.4.0
-numpydoc==0.7.0
-packaging==16.8
-pandocfilters==1.4.2
-parso==0.1.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-psutil==5.4.3
-pycodestyle==2.3.1
-pycparser==2.18
-pyflakes==1.6.0
-Pygments==2.2.0
-pylint==1.8.2
-pyOpenSSL==17.5.0
-pyparsing==2.2.0
-PySocks==1.6.7
-python-dateutil==2.6.1
-pytz==2018.3
-pyzmq==16.0.3
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.3.1
-requests==2.18.4
-rope==0.10.7
-simplegeneric==0.8.1
-six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.7.0
-sphinxcontrib-websupport==1.0.1
-spyder==3.2.7
-testpath==0.3.1
-tornado==4.5.3
-traitlets==4.3.2
-typing==3.6.4
-urllib3==1.22
-wcwidth==0.1.7
-webencodings==0.5.1
-win-inet-pton==1.0.1
-wincertstore==0.2
-wrapt==1.10.11
+gunicorn==19.7.1
+psycopg2==2.7.4
+pytz==2018.4
